@@ -90,3 +90,4 @@ INSTALLED_APPS = (
 AKISMET_API_KEY = ''
 MAX_TAG_LENGTH = 50
 FORCE_LOWERCASE_TAGS = False
+LOGIN_URL = '/admin/'
